# mouse-sync

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
backends/: CMakeLists.txt
backends/linux/kde_wayland/: CMakeLists.txt
backends/linux/kde_wayland/src/: kde_wayland_backend.cpp  kde_wayland_backend.hpp
backends/src/: backend_dispatch.cpp
backends/windows/: CMakeLists.txt
backends/windows/src/: windows_backend.cpp  windows_backend.hpp
cli/: CMakeLists.txt  main.cpp
cmake/: FetchDeps.cmake
core/: CMakeLists.txt
core/include/mouse_sync/: backend.hpp  profile.hpp
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: kde_wayland_example.json  windows_example.json
